# lyouoa-py

./: .gitignore  README.md  index.html  lyouoa.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240109054706_init.sql
src-tauri/src/: app.rs  main.rs  store.rs
src-tauri/src/sdk/: client.rs
src/lyouoa_py/: __init__.py  __main__.py  lib.py  login.py  main.py  ui.py  widget.py
test-data/: QueryRegulateLayPage.json  RegulateLogList.html  RegulateSheet.html  Regulate_Hotel.html  api.txt  try.ipynb
