[project]
name = "lyouoa-py"
version = "0.1.0"
description = "lyouoa scripts"
authors = [
    { name = "pingfury", email = "pingfury@outlook.com" }
]
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.2",
    "PyQt5>=5.15.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
extraPaths = [".venv/lib/python3.11/"]
