[project]
name = "lyouoa-py"
version = "0.1.0"
description = "lyouoa scripts"
authors = [
    { name = "pingfury", email = "pingfury@outlook.com" }
]
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.2",
    "PyQt5>=5.15.9",
    "pandas>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.0.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
extraPaths = [".venv/lib/python3.11/"]
